OO-5220: course element practice